4 February 2019: Wouter
	- Fix that log-replies prints the correct name for local-alias
	  names, for names that have a CNAME in local-data configuration.
	  It logs the original query name, not the target of the CNAME.
	- Add local-zone type inform_redirect, which logs like type inform,
	  and redirects like type redirect.

31 January 2019: Wouter
	- Set ub_ctx_set_tls call signature in ltrace config file for
	  libunbound in contrib/libunbound.so.conf.
	- improve documentation for tls-service-key and forward-first.
	- #10: fixed pkg-config operations, PKG_PROG_PKG_CONFIG moved out of
	  conditional section, fixes systemd builds, from Enrico Scholz.
	- #9: For openssl 1.0.2 use the CRYPTO_THREADID locking callbacks,
	  still supports the set_id_callback previous API.  And for 1.1.0
	  no locking callbacks are needed.
	- #8: Fix OpenSSL without ENGINE support compilation.
	- Wipe TLS session key data from memory on exit.

30 January 2019: Ralph
	- Fix case in which query timeout can result in marking delegation
	  as edns_lame_known.

29 January 2019: Wouter
	- Fix spelling of tls-ciphers in example.conf.in.
	- Fix #4224: auth_xfr_notify.rpl test broken due to typo
	- Fix locking for libunbound context setup with broken port config.

28 January 2019: Wouter
	- ub_ctx_set_tls call for libunbound that enables DoT for the machines
	  set with ub_ctx_set_fwd.  Patch from Florian Obser.
	- Set build system for added call in the libunbound API.
	- List example config for root zone copy locally hosted with auth-zone
	  as suggested from draft-ietf-dnsop-7706-bis-02.  But with updated
	  B root address.
	- set version to 1.9.0 for release.

25 January 2019: Wouter
	- Fix that tcp for auth zone and outgoing does not remove and
	  then gets the ssl read again applied to the deleted commpoint.
	- updated contrib/fastrpz.patch to cleanly diff.
	- no lock when threads disabled in tcp request buffer count.
	- remove compile warnings from libnettle compile.