@@ -4,6 +4,9 @@
 	  It logs the original query name, not the target of the CNAME.
 	- Add local-zone type inform_redirect, which logs like type inform,
 	  and redirects like type redirect.
+	- Perform canonical sort for 0x20 capsforid compare of replies,
+	  this sorts rrsets in the authority and additional section before
+	  comparison, so that out of order rrsets do not cause failure.
 
 31 January 2019: Wouter
 	- Set ub_ctx_set_tls call signature in ltrace config file for
